--- a/style.css
+++ b/style.css
@@ -25,25 +25,32 @@ a:hover{
   color: grey;
 } 
 
-/* Custom desing with class (99% of your design)*/
+/* Custom design with class (99% of your design)*/
 .container {
 	width: 	700px;
 	margin: 40px auto;
 }
 
 
-@media (max-width: 760px){
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
   .container {
-	width: 600px;
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
   }
 }
 
-
-@media (max-width: 500px){
-  .container {
-	width: 400px;
-  }
-}
 
 .card-white {
 	background-color: white;
@@ -51,7 +58,7 @@ a:hover{
 	box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
 	border-radius: 	4px;
 	margin: 20px -200px;
-	text-align: center;		
+	text-align: center;	 	
 }
 .img-circle {
 	border-radius: 50%
@@ -84,9 +91,15 @@ a:hover{
 	color: grey;
 }
 
-.list-qualities {
-	list-style: none;
+.list-qualities{
+	list-style: none;						
+	}
+
+.list-qualities li {
+    display: inline;	
 }
+
+
 /*Design adjustements using id (1% design remaining)*/
 
 #introduction p {
