--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
   background-color:  rgb(230, 230, 230);
   color:  rgb(30, 30, 30);
   font-family: times;
-  font-size: 27px
+  font-size: 27px;
+  text-align: center;
+  margin: 0px; 
 }
 
 h1, h2, h3 {
@@ -27,37 +29,18 @@ a:hover{
 
 /* Custom design with class (99% of your design)*/
 .container {
-	width: 	700px;
-	margin: 40px auto;
-}
-
-
-@media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
-  .container {
-    width: 700px;
-  }
-}
-@media (max-width: 720px) {
-  /* For a screen < 720px, this CSS will be read */
-  .container {
-    width: 500px;
-  }
-}
-@media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
-  .container {
-    width: 300px;
-  }
+	width: 	100%;
+	margin: 40px 40px;
 }
 
 
 .card-white {
 	background-color: white;
+	width: 50%;
 	padding	:40px;
 	box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
 	border-radius: 	4px;
-	margin: 20px -200px;
+	margin: 20px auto;
 	text-align: center;	 	
 }
 .img-circle {
