--- a/style.css
+++ b/style.css
@@ -58,13 +58,14 @@ a:hover{
 	background-color: white;
 	width: 50%;
 	padding	:40px;
-	box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+	box-shadow: 0px 1px 20px 6px rgb(117 117 117 / 60%);	
 	border-radius: 	4px;
 	margin: 20px auto;
 	text-align: center;	 	
 }
 .img-circle {
-	border-radius: 50%
+	border-radius: 20%
+	
 }
 .btn-blue {
 	background-color: #f7d899d6;
